--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <head>
     <p1>Hello!</p1>
     <p1>UNION!</p1>
-   
+   <p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+
 
   </head>
 </body>
