--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <style>
-.p1 {
+.p {
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
 <body>
   <head>
-    <p1>Hello!</p1>
-    <p1>UNION!</p1>
-   <p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
-
+    <p>Hello!</p>
+    <p>UNION!</p>
+   
 
   </head>
 </body>
-  
