--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 .p {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+  {
+  background-color: Blue
+  }
 </style>
 <body>
   <head>
     <p>Hello!</p>
     <br><p>UNION!</p>
-   
-<h1 style="background-color:DodgerBlue;">Hello World</h1>
 
   </head>
 </body>
