--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Hello!</p>
     <br><p>UNION!</p>
     <img src="oie_131350302442LIFk.jpg" alt="Trulli" width="500" height="333">
+    <img src="profile-pic.png" alt="Trulli" width="500" height="333">
   </head>
 </body>
