--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
   <head>
     <p>Hello!</p>
-    <br><p>UNION!</p>
+    <br><p>ONION!</p>
     <img src="oie_131350302442LIFk.jpg" alt="Trulli" width="500" height="333">
     <img src="profile-pic.png" alt="Trulli" width="500" height="333">
   </head>
 </body>
+<title>Onion</title>
