--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-  {
-  background-color: Blue
-  }
+div {
+  background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
+}
 </style>
 <body>
   <head>
