--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-div {
+body {
   background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
 }
 </style>
