--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ body {
 }
 </style>
 <body>
+          <div class ="menu" id="menu"
+        <a class="active" href="#Home">Home |</body></a>
+    </div>
   <head>
     <p>Hello!</p>
     <br><p>UNION!</p>
