--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <style>
+          #menu {
+            border-radius: 100px;
+            background: #08ca69;
+            padding: 20px;
+            width: auto ;
+            height: 10;
+        }
 .p {
   font-family: Arial, Helvetica, sans-serif;
 }
