--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@ body {
 <body>
           <div class ="menu" id="menu"
         <a class="active" href="#Home">Home |</body></a>
+          <a href=¨De EU¨>De EU</a>body> </a>
     </div>
   <head>
-    <p>Hello!</p>
-    <br><p>UNION!</p>
-    <img src="oie_131350302442LIFk.jpg" alt="Trulli" width="500" height="333">
-    <img src="profile-pic.png" alt="Trulli" width="500" height="333">
+  <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
   </head>
 </body>
 <title>Onion</title>
