--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@ body {
   <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
   </head>
 </body>
-<title>Onion</title>
+<title>De Europese Onion</title>
