--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 <body>
           <div class ="menu" id="menu"
         <a class="active" href="#Home">Home |</body></a>
-          <a href=¨De EU¨>De EU</a>body> </a>
+          <a href=¨De-EU.html¨>De EU</a></body> </a>
     </div>
   <head>
   <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
