--- a/de-eu.html
+++ b/de-eu.html
@@ -2,8 +2,8 @@
 <style>
   .p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 200
-  
+  font-size: 200;
+  text-aligment: middle;
 }
 </style>
 <head>
