--- a/de-eu.html
+++ b/de-eu.html
@@ -2,7 +2,7 @@
 <style>
   .p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 200;
+  font-size: 50px;
   text-aligment: middle;
 }
 </style>
