--- a/de-eu.html
+++ b/de-eu.html
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <style>
-  .p {
+  .h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 50px;
   text-aligment: middle;
@@ -8,7 +8,7 @@
 </style>
 <head>
   <body>
-    <p>unfinished page</p>
+    <h3>unfinished page</h3>
   </body>
 </head>
 <title>De EU</title>
