--- a/de-eu.html
+++ b/de-eu.html
@@ -1,14 +1,53 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <style>
-  .h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 50px;
-  text-aligment: middle;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    text-align: center;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.message-box h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    color: #333333;
+}
+
+.message-box p {
+    font-size: 1.2em;
+    color: #666666;
+}
+
 </style>
+<html lang="nl">
 <head>
-  <body>
-    <h3>unfinished page</h3>
-  </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>De EU</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<title>De EU</title>
+<body>
+    <div class="container">
+        <div class="message-box">
+            <h1>Pagina Onder Constructie</h1>
+            <p>Deze pagina is momenteel in aanbouw. Kom later terug voor updates!</p>
+        </div>
+    </div>
+</body>
+</html>
