--- a/de-eu.html
+++ b/de-eu.html
@@ -45,8 +45,8 @@ body {
 <body>
     <div class="container">
         <div class="message-box">
-            <h1>Pagina Onder Constructie</h1>
-            <p>Deze pagina is momenteel in aanbouw. Kom later terug voor updates!</p>
+            <h1>Bijna gelukt!</h1>
+            <p>We zijn nog bezig met deze pagina, maar als je later terug komt is die misschien wel klaar!</p>
         </div>
     </div>
 </body>
