--- a/de-eu.html
+++ b/de-eu.html
@@ -19,8 +19,8 @@ body {
     text-align: center;
     background-color: #ffffff;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+    box-shadow: 2 1 10px rgba(0, 0, 0, 0.1);
 }
 
 .message-box h1 {
@@ -32,6 +32,9 @@ body {
 .message-box p {
     font-size: 1.2em;
     color: #666666;
+}
+{
+ background-color: #0000
 }
 
 </style>
