--- a/de-eu.html
+++ b/de-eu.html
@@ -33,8 +33,8 @@ body {
     font-size: 1.2em;
     color: #666666;
 }
-{
- background-color: #0000
+body {
+  background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
 }
 
 </style>
