--- a/de-eu.html
+++ b/de-eu.html
@@ -34,8 +34,9 @@ body {
     color: #666666;
 }
 body {
-  background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
+background-image: url('vector-flag-eu-DY9DBR.jpg');
 }
+
 
 </style>
 <html lang="nl">
