--- a/de-eu.html
+++ b/de-eu.html
@@ -34,7 +34,7 @@ body {
     color: #666666;
 }
 body {
-background-image: url('vector-flag-eu-DY9DBR.jpg');
+background: rgba(0, 128, 0, 0.3)
 }
 
 
