--- a/mariokart.html
+++ b/mariokart.html
@@ -49,7 +49,7 @@ background: rgba(0, 128, 0, 0.3)
 <body>
   
 <audio controls autoplay>
-  <source src="002 Main menu.mp3" type="audio/mpeg">
+  <source src="https://fi.zophar.net/soundfiles/nintendo-ds-2sf/mario-kart-ds/002%20Main%20Menu.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
