--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
         <div class="error">
             <h1>404</h1>
             <p>Oops! Het lijkt erop dat de pagina die u zocht niet bestaat.</p>
-            <a href="/">Breng me terug</a>
+            <a href="index.html">Breng me terug</a>
         </div>
     </div>
 </body>
