--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
             width: auto ;
             height: 10;
         }
-.p {
-  font-family: Arial, Helvetica, sans-serif;
+.radio-canada-big-<uniquifier> {
+  font-family: "Radio Canada Big", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
 
 body {
