--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <style>
           #menu {
             border-radius: 100px;
-            background: #121212;
+            background: #2f2f3e;
             padding: 20px;
             width: auto ;
             height: 10;
@@ -15,7 +15,7 @@
 }
 
 body {
-  background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
+  background: rgba(12, 12, 12, 0.3)
 }
 </style>
 <body>
