--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
-  font-color: #ffffff;
+  color: #ffffff;
 }
 
 body {
