--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ body {
 </style>
 <body>
           <div class ="menu" id="menu"
-        <a class="active" href="#Home">Home |</body></a>
-          <a href="de-eu.html">De EU</a></body> </a>
+        <a style="color:red;" class="active" href="#Home">Home |</body></a>
+          <a style="color:red;" href="de-eu.html">De EU</a></body> </a>
     </div>
   <head>
-  <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
+  <p style="color:red;">Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
   </head>
 </body>
 <title>De Europese Onion</title>
