--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 <body>
           <div class ="menu" id="menu"
         <a style="color:red;" class="active" href="#Home">Home |</body></a>
-          <a style="color:red;" href="de-eu.html">De EU</a></body> </a>
+          <a style="color:red;" href="geschiedenis.html">De EU</a></body> </a>
     </div>
   <head>
   <p style="color:red;">Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
