--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ body {
 <body>
           <div class ="menu" id="menu"
         <a style="color:red;" class="active" href="#Home">Home |</body></a>
-          <a style="color:red;" href="geschiedenis.html">De EU</a></body> </a>
+          <a style="color:white;" href="geschiedenis.html">De geschiedenis</a></body> </a>
     </div>
   <head>
-  <p style="color:red;">Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
+  <p style="color:white;">Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan</p>
   </head>
 </body>
 <title>De Europese Onion</title>
