--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             width: auto ;
             height: 10;
         }
-.radio-canada-big-<uniquifier> {
+.body {
   font-family: "Radio Canada Big", sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
