--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
             height: 10;
         }
 .body {
-  font-family: "Radio Canada Big", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+  font-family: "Sans-serif";
   color: #ffffff;
 }
 
