--- a/index.html
+++ b/index.html
@@ -1,121 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-          <style>
-                    body {
-    font-family: "Sans-serif";
-    margin: 0;
-    padding: 0;
-    background-color: rgba(12, 12, 12);
-    color: #ffffff;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-header {
-    background: #2f2f3e;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 100px;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav li {
-    margin: 0 1rem;
-}
-
-nav a {
-    color: #ffffff;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-nav a.active {
-    color: red;
-}
-
-.theme-switch {
-    display: flex;
-    align-items: center;
-}
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 34px;
-    height: 20px;
-    margin-right: 0.5rem;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: 0.4s;
-    border-radius: 34px;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 12px;
-    width: 12px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: 0.4s;
-    border-radius: 50%;
-}
-
-input:checked + .slider {
-    background-color: #2196F3;
-}
-
-input:checked + .slider:before {
-    transform: translateX(14px);
-}
-
-body.dark-mode {
-    background-color: #333;
-    color: #ddd;
-}
-
-body.dark-mode header {
-    background: #1c1c28;
-}
-          </style>
-
-          <script>
-                    document.getElementById('darkModeToggle').addEventListener('change', function(event) {
-    if (event.target.checked) {
-        document.body.classList.add('dark-mode');
-    } else {
-        document.body.classList.remove('dark-mode');
-    }
-});
-          </script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Europese Onion</title>
     <link rel="icon" type="image/x-icon" href="profile-pic.png">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: "Sans-serif";
+            margin: 0;
+            padding: 0;
+            background-color: rgba(12, 12, 12);
+            color: #ffffff;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        header {
+            background: #2f2f3e;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-radius: 100px;
+        }
+
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        nav li {
+            margin: 0 1rem;
+        }
+
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        nav a.active {
+            color: red;
+        }
+
+        .theme-switch {
+            display: flex;
+            align-items: center;
+        }
+
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 34px;
+            height: 20px;
+            margin-right: 0.5rem;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: 0.4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 12px;
+            width: 12px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: 0.4s;
+            border-radius: 50%;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(14px);
+        }
+
+        body.dark-mode {
+            background-color: #333;
+            color: #ddd;
+        }
+
+        body.dark-mode header {
+            background: #1c1c28;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -136,6 +125,28 @@ body.dark-mode header {
     <main>
         <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan.</p>
     </main>
-    <script src="script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleSwitch = document.getElementById('darkModeToggle');
+            const currentTheme = localStorage.getItem('theme');
+
+            if (currentTheme) {
+                document.body.classList.add(currentTheme);
+                if (currentTheme === 'dark-mode') {
+                    toggleSwitch.checked = true;
+                }
+            }
+
+            toggleSwitch.addEventListener('change', (event) => {
+                if (event.target.checked) {
+                    document.body.classList.add('dark-mode');
+                    localStorage.setItem('theme', 'dark-mode');
+                } else {
+                    document.body.classList.remove('dark-mode');
+                    localStorage.setItem('theme', 'light-mode');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
