--- a/index.html
+++ b/index.html
@@ -3,125 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Europese Onion</title>
+    <title>EU Website</title>
     <style>
         body {
-            font-family: "Sans-serif";
+            font-family: "Roboto", sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff; /* Light mode background */
-            color: #000000; /* Light mode text color */
-            transition: background-color 0.3s, color 0.3s;
+            background-color: #ffffff;
+            color: #333333;
         }
 
         header {
-            background: #2f2f3e;
+            background-color: #1976d2;
+            color: #ffffff;
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-radius: 100px;
         }
 
-        .theme-switch {
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
             display: flex;
-            align-items: center;
         }
 
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 34px;
-            height: 20px;
-            margin-right: 1rem; /* Moved toggle to the right side */
+        nav ul li {
+            margin-right: 20px;
         }
 
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: 0.4s;
-            border-radius: 34px;
+        nav ul li a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.3s;
         }
 
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 12px;
-            width: 12px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: 0.4s;
-            border-radius: 50%;
+        nav ul li a:hover {
+            color: #ffffff;
+            text-decoration: underline;
         }
 
-        .slider-morph {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background: radial-gradient(circle at center, #f1c40f 0%, #f1c40f 40%, #636e72 40%, #636e72 100%); /* Sun */
-            transition: 0.4s;
-            left: calc(100% - 10px);
-            transform: scale(0.8);
+        main {
+            padding: 20px;
         }
 
-        input:checked + .slider {
-            background-color: #2196F3;
+        .page-content {
+            max-width: 800px;
+            margin: 0 auto;
         }
 
-        input:checked + .slider:before {
-            transform: translateX(14px);
-        }
-
-        input:checked + .slider + .slider-morph {
-            left: -10px;
-            background: radial-gradient(circle at center, #f39c12 0%, #f39c12 40%, #2c3e50 40%, #2c3e50 100%); /* Moon */
-        }
-
-        body.dark-mode {
-            background-color: #000000; /* Dark mode background */
-            color: #ffffff; /* Dark mode text color */
-        }
-
-        body.dark-mode header {
-            background: #1c1c28;
+        .footer {
+            background-color: #1976d2;
+            color: #ffffff;
+            padding: 10px;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <nav id="menu">
+        <h1>EU Website</h1>
+        <nav>
             <ul>
-                <li><a class="active" href="#Home">Home</a></li>
-                <li><a href="geschiedenis.html">De geschiedenis</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="geschiedenis.html">Geschiedenis</a></li>
+                <li><a href="onderzoek.html">Onderzoek</a></li>
             </ul>
         </nav>
-        <div class="theme-switch">
-            <label class="switch">
-                <input type="checkbox" id="darkModeToggle">
-                <span class="slider"></span>
-                <span class="slider-morph"></span>
-            </label>
-            <span>Dark Mode</span>
-        </div>
     </header>
     <main>
-        <p>Dit is de website voor het PO voor AK over de EU van Mikey, Ruben en Lasse Zeikens. Alle info is te vinden via het menu bovenaan.</p>
+        <div class="page-content">
+            <h2>Welcome to the EU Website</h2>
+            <p>This website provides information about the European Union (EU).</p>
+        </div>
     </main>
-    <script>
-        document.getElementById('darkModeToggle').addEventListener('change', function(event) {
-            if (event.target.checked) {
-                document.body.classList.add('dark-mode');
-            } else {
-                document.body.classList.remove('dark-mode');
-            }
-        });
-    </script>
+    <div class="footer">
+        &copy; 2024 EU Website
+    </div>
 </body>
 </html>
