--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EU Website</title>
+    <title>De Europese Onion</title>
     <style>
         body {
             font-family: "Roboto", sans-serif;
@@ -74,12 +74,12 @@
     </header>
     <main>
         <div class="page-content">
-            <h2>Welcome to the EU Website</h2>
-            <p>This website provides information about the European Union (EU).</p>
+            <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
+            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
         </div>
     </main>
     <div class="footer">
-        &copy; 2024 EU Website
+        &copy; Mikey, Ruben en Lasse
     </div>
 </body>
 </html>
