--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="geschiedenis.html">Geschiedenis</a></li>
                 <li><a href="onderzoek.html">Onderzoek</a></li>
+                <li><a href="voor-en-na-delen.html">Voor en na delen</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="page-content">
             <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
-            <p>Gemaakt in html door Mickey, onderzoek door Ruben en Lasse</p>
+            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
         </div>
     </main>
     <div class="footer">
