--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #ffab40;
-            --secondary-color: #ff6f00;
-            --background-light: #f8f9fa; /* Light gray background */
+            --primary-color: #a86aff;
+            --secondary-color: #03DAC6;
+            --background-light: #FFFFFF;
             --background-dark: #121212;
-            --text-light: #333333;
+            --text-light: #000000;
             --text-dark: #ffffff;
+            --accent-dark: #3700B3;
+            --accent-dark-hover: #018786;
         }
 
         body {
@@ -25,17 +27,27 @@
         }
 
         header {
-            background-color: var(--primary-color);
+            background-color: var(--background-light);
             color: var(--text-light);
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-radius: 20px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
         }
 
-        nav ul {
+        .header-title {
+            flex: 1;
+        }
+
+        .menu {
+            flex: 2;
+            display: flex;
+            justify-content: center;
+        }
+
+        .menu nav ul {
             list-style: none;
             padding: 0;
             margin: 0;
@@ -44,12 +56,12 @@
             overflow: hidden;
         }
 
-        nav ul li {
+        .menu nav ul li {
             margin-right: 20px;
         }
 
-        nav ul li a {
-            color: #ffffff;
+        .menu nav ul li a {
+            color: var(--text-dark);
             text-decoration: none;
             transition: transform 0.3s, background-color 0.3s;
             padding: 10px 20px;
@@ -58,30 +70,9 @@
             display: inline-block;
         }
 
-        nav ul li a:hover {
+        .menu nav ul li a:hover {
             background-color: #ff8c56;
             transform: translateY(-2px);
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        .page-content {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .footer {
-            background-color: var(--secondary-color);
-            color: var(--text-dark);
-            padding: 20px;
-            text-align: center;
-            border-radius: 20px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
         }
 
         #theme-toggle {
@@ -96,36 +87,79 @@
             transition: transform 0.3s, color 0.3s;
         }
 
+        main {
+            padding: 20px;
+        }
+
+        .page-content {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: var(--primary-color);
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .footer {
+            background-color: var(--background-light);
+            color: var(--text-light);
+            padding: 20px;
+            text-align: center;
+            border-radius: 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+        }
+
         body.dark-mode {
             background-color: var(--background-dark);
             color: var(--text-dark);
         }
 
         body.dark-mode header {
-            background-color: #bb86fc;
+            background-color: var(--accent-dark);
+            color: var(--text-dark);
+        }
+
+        body.dark-mode .menu nav ul li a {
+            background-color: var(--accent-dark-hover);
+            color: var(--text-dark);
+        }
+
+        body.dark-mode .menu nav ul li a:hover {
+            background-color: #ff8c56;
+        }
+
+        body.dark-mode .page-content {
+            background-color: var(--secondary-color);
+            color: var(--text-dark);
         }
 
         body.dark-mode .footer {
-            background-color: #3700b3;
+            background-color: var(--accent-dark);
+            color: var(--text-dark);
         }
 
         body.dark-mode #theme-toggle .material-icons {
-            color: var(--text-light);
-            transform: rotate(180deg);
+            color: var(--text-dark);
+            transform: rotate(360deg);
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>EU Website</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="geschiedenis.html">Geschiedenis</a></li>
-                <li><a href="onderzoek.html">Onderzoek</a></li>
-                <li><a href="voor-en-na-delen.html">Voor en na delen</a></li>
-            </ul>
-        </nav>
+        <div class="header-title">EU Website</div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="geschiedenis.html">Geschiedenis</a></li>
+                    <li><a href="onderzoek.html">Onderzoek</a></li>
+                    <li><a href="voor-en-na-delen.html">Voor en na delen</a></li>
+                </ul>
+            </nav>
+        </div>
         <button id="theme-toggle">
             <span class="material-icons">light_mode</span>
         </button>
