--- a/404.html
+++ b/404.html
@@ -59,5 +59,9 @@
             <a href="index.html">Breng me terug</a>
         </div>
     </div>
+  <audio autoplay loop>
+    <source src="waluigi-pinball-music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 </body>
 </html>
