--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Europese Onion</title>
+    <title>De Geschiedenis | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
@@ -149,7 +149,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">EU Website</div>
+        <div class="header-title">Geschiedenis</div>
         <div class="menu">
             <nav>
                 <ul>
@@ -166,8 +166,9 @@
     </header>
     <main>
         <div class="page-content">
-            <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
-            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
+            <h2>Geschiedenis EU</h2>
+            <p>Na de twee Wereldoorlogen ontstond er een politiek klimaat voor Europese integratie, met als doel vrede te bewaren. In de negentiende eeuw ontstonden vredelievende ideeën over een verenigd Europa, waarin individuele lidstaten op gelijkwaardige basis konden samenwerken. Een van de eerste voorstanders van deze Europese vereniging was de Franse pacifist en intellectueel Victor Hugo. Tijdens de wederopbouw na de Eerste Wereldoorlog oogstte de Oostenrijks-Hongaarse graaf Richard Coudenhove-Kalergi succes met zijn boek “Pan-Europa” en richtte hij in 1923 de eerste Europese Eenheidsbeweging op. In de jaren 1930 werd dit enthousiasme echter terzijde geschoven door het opkomend fascisme en nationaalsocialisme. Een heropleving volgde in 1941 met een manifest van de Italiaan Altiero Spinelli, die in Zwitserland een Europees Congres oprichtte. Winston Churchill riep in 1946 op tot een “United States of Europe”, maar deze visie verschilde van die van Spinelli. Deze tweedeling tussen federalisme en supranationalisme bestaat nog steeds en was ook de reden dat het Verenigd Koninkrijk niet tot de eerste lidstaten van de Unie behoort. In plaats daarvan richtte het Verenigd Koninkrijk eerst de Europese Vrijhandelsassociatie op.Wederopbouw en eerste kiemen
+De echte geboorte van de huidige Europese Unie ligt enkele jaren later en bij een Fransman, Jean Monnet, nog altijd bekend als de grootvader van de Europese Unie. In 1944 sprak hij zich al uit over het Duitse probleem van potentiële herbewapening, dat mogelijk opgelost kon worden door de kolen- en ijzermijnen van het Ruhrgebied onder Europees gezag te brengen1. Dit legde de basis voor verdere samenwerking en uiteindelijk de oprichting van de Europese Gemeenschap voor Kolen en Staal (EGKS) in 1951. De EGKS was de eerste stap in de richting van een verenigd Europa en legde de basis voor de latere Europese Unie.</p>
         </div>
     </main>
     <div class="footer">
