--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <main>
         <div class="page-content">
             <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
-            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
+            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</a></p>
         </div>
     </main>
     <div class="footer">
