--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -157,7 +157,7 @@
                     <li><a href="geschiedenis.html">Geschiedenis</a></li>
                     <li><a href="onderzoek.html">Onderzoek</a></li>
                     <li><a href="voor-en-na-delen.html">Voor en na delen</a></li>
-                    <li><a href="voorspelling-toekomst.html">Voorspelling van de Toekomst</li>
+                    <li><a href="voorspelling-toekomst.html">Voorspelling van de Toekomst</a></li>
                 </ul>
             </nav>
         </div>
