--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <li><a href="geschiedenis.html">Geschiedenis</a></li>
                     <li><a href="onderzoek.html">Onderzoek</a></li>
                     <li><a href="voor-en-na-delen.html">Voor en na delen</a></li>
-                    <li><a href="voorspelling-toekomst.html">Voorspelling van de Toekomst</li>
+                    <li><a href="voorspelling-toekomst.html">Voorspelling van de Toekomst</a></li>
                 </ul>
             </nav>
         </div>
@@ -168,7 +168,7 @@
     <main>
         <div class="page-content">
             <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
-            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</a></p>
+            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
         </div>
     </main>
     <div class="footer">
