--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #a86aff;
-            --secondary-color: #03DAC6;
+            --primary-color: #ffb4b4;
+            --secondary-color: #477a75;
             --background-light: #FFFFFF;
-            --background-dark: #121212;
+            --background-dark: #000000;
             --text-light: #000000;
             --text-dark: #ffffff;
-            --accent-dark: #3700B3;
+            --menu-footer-light: #444444;
+            --menu-footer-dark: #333333;
             --accent-dark-hover: #018786;
         }
 
@@ -27,14 +28,14 @@
         }
 
         header {
-            background-color: var(--background-light);
-            color: var(--text-light);
+            background-color: var(--menu-footer-light);
+            color: var(--text-dark);
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 20px;
+            border-radius: 0;
         }
 
         .header-title {
@@ -52,8 +53,6 @@
             padding: 0;
             margin: 0;
             display: flex;
-            border-radius: 20px;
-            overflow: hidden;
         }
 
         .menu nav ul li {
@@ -65,13 +64,13 @@
             text-decoration: none;
             transition: transform 0.3s, background-color 0.3s;
             padding: 10px 20px;
-            border-radius: 30px;
-            background-color: #ff5733;
+            border-radius: 5px;
+            background-color: #666666;
             display: inline-block;
         }
 
         .menu nav ul li a:hover {
-            background-color: #ff8c56;
+            background-color: #888888;
             transform: translateY(-2px);
         }
 
@@ -96,16 +95,16 @@
             margin: 0 auto;
             background-color: var(--primary-color);
             padding: 20px;
-            border-radius: 20px;
+            border-radius: 5px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .footer {
-            background-color: var(--background-light);
-            color: var(--text-light);
+            background-color: var(--menu-footer-light);
+            color: var(--text-dark);
             padding: 20px;
             text-align: center;
-            border-radius: 20px;
+            border-radius: 0;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -117,8 +116,8 @@
             color: var(--text-dark);
         }
 
-        body.dark-mode header {
-            background-color: var(--accent-dark);
+        body.dark-mode header, body.dark-mode .footer {
+            background-color: var(--menu-footer-dark);
             color: var(--text-dark);
         }
 
@@ -136,11 +135,6 @@
             color: var(--text-dark);
         }
 
-        body.dark-mode .footer {
-            background-color: var(--accent-dark);
-            color: var(--text-dark);
-        }
-
         body.dark-mode #theme-toggle .material-icons {
             color: var(--text-dark);
             transform: rotate(360deg);
@@ -149,7 +143,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">EU Website</div>
+        <div class="header-title">Geschiedenis</div>
         <div class="menu">
             <nav>
                 <ul>
@@ -167,8 +161,8 @@
     </header>
     <main>
         <div class="page-content">
-            <h2>Website over de EU voor AK Door Mikey, Lasse en Ruben</h2>
-            <p>Gemaakt in html door Mikey, onderzoek door Ruben en Lasse</p>
+            <h2>De Europese Unie</h2>
+            <p>De website voor AK over de EU door Mikey, Ruben en Lasse</p>
         </div>
     </main>
     <div class="footer">
