--- a/voor-en-na-delen.html
+++ b/voor-en-na-delen.html
@@ -144,7 +144,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">Geschiedenis</div>
+        <div class="header-title">Voor- en nadelen</div>
         <div class="menu">
             <nav>
                 <ul>
