--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De Europese Onion</title>
+    <title>Onze voorspelling van de toekosmt | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
@@ -143,7 +143,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">Geschiedenis</div>
+        <div class="header-title">Onze toekomst voorspelling</div>
         <div class="menu">
             <nav>
                 <ul>
