--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -161,7 +161,7 @@
     </header>
     <main>
         <div class="page-content">
-            <h2>De Europese Unie</h2>
+            <h2>Onze voorspellingen</h2>
             <p>EU-voorspelling Lasse:<br>
 <br>
 Ik denk dat het twee kanten op kan gaan met de directie van de EU en als de goede keuzes worden gemaakt dan blijft de directie van de eu hetzelfde maar als de verkeerde keuzes worden gemaakt dan kan het een stuk slechter gaan in de eu dus het hangt heel erg van de keuzes die gemaakt worden <br>
