--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         <div class="page-content">
             <h2>De Europese Unie</h2>
             <p>De website voor AK over de EU door Mikey, Ruben en Lasse</p>
+            <a href="https://155601-mikey.github.io/Project-EU-webste-PO-Mikey-Ruben-en-Lasse/geschiedenis.html" style="position: absolute; bottom: 10px; right: 10px; color: #0078d7; text-decoration: none;">Volgende pagine (geschiedenis)</a>
         </div>
     </main>
     <div class="footer">
