--- a/voor-en-na-delen.html
+++ b/voor-en-na-delen.html
@@ -197,6 +197,7 @@
             <h3>Veilig en gemakkelijk reizen binnen de EU:</h3>
             <p>Door de COVID-19-pandemie is reizen tijdelijk lastiger geworden. Maar onder normale omstandigheden is reizen in Europa veel gemakkelijker dan vroeger. Dat is het geval omdat de meeste EU-landen, en sommige niet-EU-landen, de grenscontroles tussen hun landen hebben afgeschaft. Deze afschaffing van grenscontroles was mogelijk dankzij het Akkoord van Schengen, dat is vernoemd naar het dorp in Luxemburg waar het in 1985 werd ondertekend.</p>
             <p>Als Europees burger kun je zonder paspoort binnen de 27 “Schengenlanden” reizen: 23 EU-landen (België, Denemarken, Duitsland, Estland, Finland, Frankrijk, Griekenland, Hongarije, Italië, Kroatië, Letland, Litouwen, Luxemburg, Malta, Nederland, Oostenrijk, Polen, Portugal, Slovenië, Slowakije, Spanje, Tsjechië en Zweden) plus IJsland, Liechtenstein, Noorwegen en Zwitserland. Bulgarije, Cyprus, Ierland en Roemenië maken momenteel geen deel uit van het Schengengebied. Wanneer je reist naar of terugkomt van een land buiten het Schengengebied, moet je een geldig paspoort of identiteitsbewijs laten zien.</p>
+            <a href="https://155601-mikey.github.io/Project-EU-webste-PO-Mikey-Ruben-en-Lasse/voorspelling-toekomst.html" style="position: page-content; bottom: 10px; right: 10px; color: #0078d7; text-decoration: none;">Volgende pagine (Voorspelling toekomst)</a>
         </div>
     </main>
     <div class="footer">
