--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -173,6 +173,7 @@ Ik denk dat het twee kanten op kan gaan met de directie van de EU en als de goed
             EU-voorspelling Ruben: <br>
             <br>
             Mijn verwachtingen zijn dat de EU meer op het klimaat gaat, want de aarde blijft opwarmen en oogsten gaan uitijndelijk mislukken dus dan kan de EU eerder mee bezig gaan en er meer op focusen, ik denk ook dat polen erbij komt als de oorlog tussen oekraine en rusland over is. er worden dan ook meer zonne/windmolen parken aangelegd. landen worden uitgebreid en regels over handel en olie prijsen gaan veranderen. </p>
+            <a href="https://155601-mikey.github.io/Project-EU-webste-PO-Mikey-Ruben-en-Lasse/onderzoek.html" style="position: page-content; bottom: 10px; right: 10px; color: #0078d7; text-decoration: none;">Volgende pagine (onderzoek)</a>
         </div>
     </main>
     <div class="footer">
