--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">Geschiedenis</div>
+        <div class="header-title">Home</div>
         <div class="menu">
             <nav>
                 <ul>
