--- a/onderzoek.html
+++ b/onderzoek.html
@@ -174,7 +174,7 @@
 </head>
 <body>
     <header>
-        <div class="header-title">Geschiedenis</div>
+        <div class="header-title">Onderzoek</div>
         <div class="menu">
             <nav>
                 <ul>
