--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onze voorspelling van de toekosmt | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
+<style>
     :root {
         --primary-color: #ffb4b4;
         --secondary-color: #477a75;
@@ -28,6 +28,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        overflow-x: hidden; /* Ensure no horizontal overflow */
     }
 
     header {
@@ -39,6 +40,8 @@
         align-items: center;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         border-radius: 0;
+        width: 100%; /* Ensure header takes full width */
+        box-sizing: border-box; /* Include padding and border in element's width and height */
     }
 
     .header-title {
@@ -94,15 +97,19 @@
         padding: 20px;
         display: flex;
         justify-content: center;
+        box-sizing: border-box; /* Include padding and border in element's width and height */
+        width: 100%; /* Ensure main takes full width */
     }
 
     .page-content {
         max-width: 800px;
+        width: 100%; /* Ensure page content takes full width within its max-width */
         margin: 0 auto;
         background-color: var(--primary-color);
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box; /* Include padding and border in element's width and height */
     }
 
     .footer {
@@ -111,8 +118,9 @@
         padding: 20px;
         text-align: center;
         border-radius: 0;
-        width: 100%;
+        width: 100%; /* Ensure footer takes full width */
         box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box; /* Include padding and border in element's width and height */
     }
 
     body.dark-mode {
@@ -136,7 +144,7 @@
 
     body.dark-mode .page-content {
         background-color: var(--secondary-color);
-        color: var(--text-dark);
+        color: var (--text-dark);
     }
 
     body.dark-mode #theme-toggle .material-icons {
@@ -144,6 +152,7 @@
         transform: rotate(360deg);
     }
 </style>
+
 
 </head>
 <body>
